2000-12-13  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/BounceHandler.pm (handle_bounce_user): Actually call
	handle_bounce_removal to delete users.
	(handle_bounce_removal): Delete users only when -noprobe is
	specified.

	* lib/Mj/Config.pm (parse_access_rules, parse_bounce_rules):
	Accept '-' separating actions from modes in addition to '='.

2000-12-12  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/mj_cf_defs.pl: Now that reply_do and subject_prefix default
	to nonempty values, default_flags should not include replyto or
	prefix.

	* lib/Mj/BounceHandler.pm (handle_bounce_removal): New function:
	handle deleting of users or constructing tokens to do so.

2000-12-11  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (trigger): Expire additional bounce data as
	well.

	* lib/Mj/List.pm (expire_subscriber_data): Trim accidental debug
	statement.  Properly deal with excessive counts.  Unshift data
	into new list unstead of pushing it, so that order is preserved.
	
	(expire_bounce_data): New function: expire old data from _bounce
	database.

2000-12-11  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/BounceHandler.pm (handle_bounce_user): Pass $user to
        _gen_bounce_message.
	(handle_bounce_user): Stop warning "don't know how to inform".

2000-12-11  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/List.pm (bounce_gen_stats): Handle generating statistics
	even if we got no bounce data.

	* lib/Mj/CommandProps.pm: "subscribed" variable is valid in
	bounce_rules.

	* lib/Mj/BounceHandler.pm (_gen_bounce_message): New function to
	generate the bounce report message.
	(handle_bounce_message): Don't ignore warnings; let bounce_rules
	decide that.  If handle_bounce_user doesn't return a message,
	assume that the owner doesn't want to be informed about the
	bounce.
	(handle_bounce_user): Rewrite.  Pay some atttention to
	bounce_rules; don't generate a report if the owner doesn't want to